# nugget

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  Makefile  README.md
.github/workflows/: build.yml
include/: chunk.h  common.h  debug.h  memory.h  value.h
src/: chunk.c  debug.c  main.c  memory.c  value.c
test/: test_chunk.c  test_memory.c  test_value.c
